react/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app
spec:
  selector:
    app: react-app
  ports:
  - port: 9000
    targetPort: 9000
  type: LoadBalancer
