react/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: react-app
spec:
  rules:
    - host: uit.social
      http:
        paths:
          - path: /
            backend:
              serviceName: react-app
              servicePort: 80
